--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
